--- a/index.html
+++ b/index.html
@@ -2,12 +2,29 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Petite Console</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
+
 </head>
 <body>
-<h1>Hello World!</h1>
-Nous utilisons Node <script>document.write(process.versions.node)</script>,
-Chrome <script>document.write(process.versions.chrome)</script>,
-et Electron <script>document.write(process.versions.electron)</script>.
+<h1 style="text-align : center ;">Hello World!</h1>
+<div  style="text-align : center ;">
+
+        <legend>Recherche Un Repo / username</legend>
+
+        <input type="search" id="mySearch"  name="mySearch" placeholder="chercher ton user" onkeypress="SearchPressEnter(event)">
+
+        <button  class="button is-primary is-outlined" id="buttonSearch" onclick=" buttonSearch()">Rechercher</button>
+
+    <div id="demo">
+
+    </div>
+</div>
 </body>
+<script src="app.js" charset="utf-8"></script>
+<script type="text/javascript">
+</script>
 </html>
